--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <title>Wedding Dance App</title>
+    <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" media="screen" />
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
